# dieToDo

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  dbg.mjs  dbg_die.mjs  fly.toml  index.html  shot.mjs  shot_login.mjs  shot_todo.mjs  verify.mjs  verify_auth.mjs  verify_contain.mjs  verify_persist.mjs  verify_reset.mjs  verify_todo.mjs
.github/workflows/: fly.yml
src/: main.rs
static/: index.html
