[package]
name = "dice-todo-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
argon2 = "0.5"
rand = "0.8"
time = "0.3"

[profile.dev]
# Faster incremental builds while iterating.
opt-level = 0
